device api basic logic
